<resources>
    <string name="app_name">Ben Hero</string>
    <string name="server_client_id">299241853985-rftlc08pi47h7h6t59i2no59s8t6htti.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="bem_vindo_ao_ben_hero_app">Bem vindo ao Ben Hero App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_com_o_facebook">Login com o facebook</string>
    <string name="no_account">No account?</string>
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="proceed">Proceed</string>
    <string name="login_com_o_google">Login com o google</string>
    <string name="bem_vindo_ao_ben_hero">Bem vindo ao BEN HERO</string>
    <string name="profissional_da_sa_de">Profissional da saúde</string>
    <string name="paciente">Paciente</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="numero_do_celular">Numero do celular</string>
    <string name="numero_do_segundo_celular">*Numero do segundo celular</string>
    <string name="endere_o">Endereço</string>
    <string name="salvar">Salvar</string>
    <string name="esquerdo">Esquerdo</string>
    <string name="direito">Direito</string>
    <string name="ambos">Ambos</string>
    <string name="qual_o_s_lado_s_da_protese">Qual o(s) lado(s) da protese?</string>
    <string name="voc_paciente_ou_profissional_responsavel">Você é paciente ou profissional responsavel?</string>
    <string name="profissional">Profissional</string>
    <string name="crm">Crm</string>
    <string name="uf_crm">UF CRM</string>
    <string name="perfil">Perfil</string>
    <string name="conectividade">Conectividade</string>
    <string name="debug">Debug</string>
    <string name="game">Game</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="play">play</string>

    <!--identificação facebook-->
    <string name="facebook_app_id">191188654857821</string>
    <string name="fb_login_protocol_scheme">fb191188654857821</string>

</resources>
