<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.SiginPacienteActivity"
    android:background="@drawable/gradiente_backgroud">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textBemVindo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="37dp"
                android:text="@string/bem_vindo_ao_ben_hero"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_button"
                android:hint="@string/digite_o_seu_nome"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <EditText
                android:id="@+id/editCelular"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:hint="@string/numero_do_celular"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <EditText
                android:id="@+id/editCelularSecundario"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:hint="@string/numero_do_segundo_celular"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <EditText
                android:id="@+id/editEndereco"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:hint="@string/endere_o"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:hint="@string/password"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/qual_o_s_lado_s_da_protese"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupCoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/cotoEsquerdo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/esquerdo" />

                <RadioButton
                    android:id="@+id/cotoDireito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/direito" />

                <RadioButton
                    android:id="@+id/ambosCoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ambos" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/savar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom|right"
        android:src="@drawable/ic_save"
        android:layout_margin="20dp"/>

</android.support.design.widget.CoordinatorLayout>