<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context=".app.PacienteMainActivity">

    <Button
        android:id="@+id/perfil_paciente_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorVerde4"
        android:drawableStart="@drawable/perfil_icon"
        android:text="@string/perfil"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:onClick="irParaTelaDePerfil"/>
    <Button
        android:id="@+id/conctividade_paciente_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorVerde3"
        android:layout_weight="1"
        android:text="@string/conectividade"
        android:drawableStart="@drawable/bluetooth_icon"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:onClick="irParaTelaDeConectividade"/>
    <Button
        android:id="@+id/debug_paciente_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorVerde2"
        android:layout_weight="1"
        android:drawableStart="@drawable/estatiticas_icon"
        android:text="@string/debug"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:onClick="irParaTelaDeDebug"/>
    <Button
        android:id="@+id/game_paciente_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorVerde1"
        android:drawableStart="@drawable/gamepad_icon"
        android:layout_weight="1"
        android:text="@string/game"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:onClick="irParaGame"/>

</LinearLayout>